--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
+    "test:coverage": "jest --coverage",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+    "enzyme": "^3.11.0",
     "react": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-native": "0.67.4"
   },
   "devDependencies": {
@@ -22,8 +26,5 @@
     "jest": "^27.5.1",
     "metro-react-native-babel-preset": "^0.69.1",
     "react-test-renderer": "17.0.2"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
