--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@testing-library/react-native": "^9.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "enzyme": "^3.11.0",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
-    "react-native": "0.67.4"
+    "react-native": "0.67.4",
+    "react-native-testing-library": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.7",
