--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@testing-library/react-native": "^9.0.0",
+    "@types/react-native": "^0.67.3",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "enzyme": "^3.11.0",
     "react": "17.0.2",
